@@ -68,10 +68,24 @@ Cortado ANT build file
 
 <!-- generate Configure-time options class as src/com/fluendo/player/Configure.java -->
   <target name="configure">
-    <exec dir="${basedir}" executable="./gen-Configure">
-      <env key="VERSION" value="${product.version}" />
-      <arg line="Built using ant." />
-    </exec>
+    <tstamp>
+      <format property="DATE" pattern="yyyy-MM-dd" />
+   </tstamp>
+
+    <echo file="${src}/com/fluendo/player/Configure.java" append="true"
+>
+package com.fluendo.player;
+
+class Configure
+{
+  public String buildInfo = "Built on ${DATE} (version ${product.version}) in ${build.type} mode.";
+
+  public Configure() {
+  }
+}
+    </echo>
+    <echo
+>Built on ${DATE} (version ${product.version}) in ${build.type} mode.</echo>
   </target>
 
 <!-- prepare plugin.*.true variables  by parsing the exclude property-->
