@@ -1,15 +1,0 @@
-#!/bin/bash
-
-DATE=`date`
-
-cat > src/com/fluendo/player/Configure.java <<EOF
-package com.fluendo.player;
-
-class Configure
-{
-  public String buildInfo = "I was built on $DATE (version $VERSION). $*";
-
-  public Configure() {
-  }
-}
-EOF
